xml/tests/testData/xml/SchemaReferencesValidation.xsd
<schema targetNamespace="http://www.emc.com/schemas/celerra/xml_api"
    elementFormDefault="qualified" 
    attributeFormDefault="unqualified"
    xmlns="http://www.w3.org/2001/XMLSchema"
    xmlns:xs="http://www.w3.org/2001/XMLSchema"
    xmlns:api="http://www.emc.com/schemas/celerra/xml_api"
  >
    <element name="Indication">
        <complexType>
            <group ref="api:<error descr="Cannot resolve symbol 'api:MyGroup'">MyGroup</error>"/>
            <group ref="api:aaa"/>
          <attribute ref="xml:lang"/>
          <attribute ref="xml:base"/>
          <attribute ref="xml:space"/>
          <attribute ref="xml:<error descr="Cannot resolve symbol 'xml:lang1'">lang1</error>"/>
        </complexType>
    </element>
    <group name="aaa"></group>
  
    <simpleType name="string" id="string">
      <restriction base="anySimpleType">
        <whiteSpace value="preserve" id="<error descr="Duplicate id reference">string.preserve</error>"/>
      </restriction>
    </simpleType>
    <simpleType name="string" id="string2">
      <restriction base="xs:anySimpleType">
        <whiteSpace value="preserve" id="<error descr="Duplicate id reference">string.preserve</error>"/>
      </restriction>
    </simpleType>
</schema>

